# earprint

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tmp.html
.github/workflows/: ci.yml
apps/cron/: package.json  tsconfig.json  wrangler.jsonc
apps/cron/src/: index.ts
apps/extension/: LOAD-LOCALLY.md  manifest.config.ts  package.json  tsconfig.json
apps/extension/scripts/: gen-icons.mjs
apps/extension/src/: background.ts  connect.ts  content.ts  inject.ts  parser.ts  popup.html  popup.ts
apps/extension/store-assets/: listing-en.md  listing-ko.md
apps/extension/test/: parser.test.ts
apps/web/: .dev.vars.example  next.config.mjs  open-next.config.ts  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  wrangler.jsonc
apps/web/e2e/: README.md  auth.setup.ts  smoke.spec.ts
apps/web/e2e/authed/: dashboard.spec.ts
apps/web/public/.well-known/: security.txt
apps/web/scripts/: analyze-local.mjs  apply-schema.mjs  backfill-mb-years.mjs  e2e-seed.mjs  import-takeout.mjs  make-og.cjs  seed-genre-content.mjs
apps/web/src/: auth.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/components/: AiPsychologyDisclaimer.tsx  AuthMenu.tsx  CanvasShareMenu.tsx  CookieBanner.tsx  Footer.tsx  LegalDoc.tsx  LikesDisclaimer.tsx  LocaleToggle.tsx  MobileBottomNav.tsx  MusicMBTICard.tsx  MusicZodiacCard.tsx  NavBar.tsx  PageSkeleton.tsx  PersonaCard.tsx  (+2 more)
db/: README.md  schema.sql
docs/: SAMPLE-WORLDCUPS.md  STREAMING-INTEGRATIONS.md  UX-AUDIT-R37.md  WORLDCUP-ROADMAP.md
services/analysis/: .dockerignore  Dockerfile  MIR_PHASE5.md  README.md  fly.toml  pyproject.toml
services/analysis/app/: alerts.py  config.py  db.py  main.py  schemas.py  worker.py
services/analysis/app/pipeline/: __init__.py  deezer.py  enricher.py  gemini.py  mir.py  resolver.py  usage.py
services/analysis/scripts/: mir-deploy.sh  mir-smoke-test.sh  upload-models.sh
(+239 files in other folders)
