[project]
name = "playlist-analyzer-analysis"
version = "0.0.0"
description = "Playlist Analyzer 분석 서비스 — 트랙 정규화 · API 보강 · MIR"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "redis>=5.2",
    "rq>=2.0",
]

[project.optional-dependencies]
# MIR(오디오 분석) 의존성 — 무겁고 플랫폼 의존적이라 분리.
# Phase 3 에서 사용. essentia-tensorflow 는 Linux/x86 환경 권장.
mir = [
    "numpy>=1.26",
    "librosa>=0.10",
    "essentia-tensorflow>=2.1b6.dev1110",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
