[project]
name = "playlist-analyzer-analysis"
version = "0.1.0"
description = "Earprint analysis service — runs the Deezer+Gemini analyze pipeline outside Cloudflare Workers' 50-subreq cap"
requires-python = ">=3.12"
# Core deps — kept lean. Phase 1 (current) only needs FastAPI + Postgres.
# Redis/RQ get re-added in Phase 4+ if we ever fan out to multiple workers,
# but Postgres SKIP LOCKED gives us per-job locking without an extra service.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "httpx>=0.27",
    # Error tracking — no-op without SENTRY_DSN env, so the dep is cheap
    # to carry even before we wire up a Sentry project.
    "sentry-sdk[fastapi]>=2.18",
]

[project.optional-dependencies]
# Audio analysis dependencies — heavy + platform-specific, reserved for the
# future MIR phase (Essentia/Discogs-EffNet for BPM/key/embeddings).
mir = [
    "numpy>=1.26",
    "librosa>=0.10",
    "essentia-tensorflow>=2.1b6.dev1110",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
